# Posha_internship_assignment

./: .gitignore  README.md
src/api_python_scripts/: monitor.py  move.py  move_client.py  new.py  scene.py  set_scene.py  state.py  vis.py
src/custom_movit/: .setup_assistant  CMakeLists.txt  package.xml
src/custom_movit/config/: moveit_controllers.yaml  piper.srdf  piper.urdf.xacro  ros2_controllers.yaml
src/custom_movit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/piper_automation/: package.xml  setup.cfg  setup.py
src/piper_automation/config/: waypoints.yaml
src/piper_automation/piper_automation/: pick_and_place.py
src/piper_description/: CMakeLists.txt  package.xml  setup.py
src/piper_description/launch/: minimal.launch.py  posha_sim.launch.py
src/piper_description/meshes/: stove.stl
src/piper_description/objects/: model.config  model.sdf
src/piper_description/urdf/: piper_description.urdf  piper_description.xacro  piper_description_gazebo.xacro  piper_no_gripper_description.xacro
